deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicio-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: servicio-app
  template:
    metadata:
      labels:
        app: servicio-app
    spec:
      containers:
      - name: servicio-container
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m" # Obligatorio para que el HPA pueda medir el uso
