ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicio-ingress
  annotations:
    # Esta anotación es clave si usas el Ingress Controller de NGINX
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: servicio.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servicio-service
            port:
              number: 80
